--- a/clean-architecture/package.json
+++ b/clean-architecture/package.json
@@ -13,6 +13,14 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm:cli": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "makemigrations:local": "NODE_ENV=local npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/local/%npm_config_name%",
+    "makemigrations:local:mac": "NODE_ENV=local npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/local/$npm_config_name",
+    "makemigrations:dev": "NODE_ENV=dev npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/dev/%npm_config_name%",
+    "makemigrations:prod": "NODE_ENV=prod run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/prod/%npm_config_name%",
+    "migrations:local": "NODE_ENV=local npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
+    "migrations:dev": "NODE_ENV=local npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
+    "migrations:prod": "NODE_ENV=prod npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -32,6 +40,7 @@
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24"
