--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -36,14 +36,20 @@
     "@nestjs/platform-express": "^11.0.15",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
+    "nestjs-bustransit": "^0.1.1",
+    "passport": "^0.7.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24"
+    "shallow-equal-object": "^1.1.1",
+    "typeorm": "^0.3.24",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
