--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -21,10 +21,10 @@
     "migrations:local": "NODE_ENV=local npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
     "migrations:dev": "NODE_ENV=local npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
     "migrations:prod": "NODE_ENV=prod npm run typeorm:cli migration:run -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:cov": "NODE_ENV=local jest --config jest.config.js --coverage",
+    "test:debug": "NODE_ENV=local node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -69,6 +69,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-extended": "^6.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -77,22 +78,5 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
