--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typeorm:cli": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:create:local": "NODE_ENV=local npm run typeorm:cli -- migration:create ./src/migrations/local/$npm_config_name",
     "makemigrations:local": "NODE_ENV=local npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/local/%npm_config_name%",
     "makemigrations:local:mac": "NODE_ENV=local npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/local/$npm_config_name",
     "makemigrations:dev": "NODE_ENV=dev npm run typeorm:cli -- -d ./src/infrastructure/database/typeorm/typeorm.options.ts migration:generate ./database/migrations/dev/%npm_config_name%",
@@ -32,6 +33,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
     "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.15",
