--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -32,13 +32,13 @@
     "@nestjs/common": "^11.0.15",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
-    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.15",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@ocoda/event-sourcing": "^2.1.3",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
