--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -38,8 +38,8 @@
     "@nestjs/platform-express": "^11.0.15",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@ocoda/event-sourcing": "^2.1.3",
     "@types/bcrypt": "^5.0.2",
+    "add": "^2.0.6",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
